tests/samples/invalid/nested_naked_if.pn
fn main() -> i32
{
	var x = 33;

	if x == 0
		if x == 1
			goto return;
	else if x == 2
	{
		if x == 5
		{
			x = 17;
		}
		else
			goto return;
	}
	else if x == 3
		goto return;
	else
	{
		x = 55;
	}

	return:
	x
}
